--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 streamlit
 pandas
 plotly
+mlxtend
 openpyxl
 openai
 langchain
 langchain-core
 langchain-openai
 langchain-community
+scikit-learn
+matplotlib
