chnage sin requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,15 @@ streamlit
 pandas
 numpy
 plotly
-openpyxl
-mlxtend
-openai
-langchain
-langchain-core
-langchain-openai
-langchain-community
-scikit-learn
-matplotlib
 seaborn
+matplotlib
+mlxtend
+langchain-openai
+langchain-core
 statsmodels
 prophet
 xgboost
+scikit-learn
+networkx
+xlsxwriter
+openpyxl
