chnages with gemini

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,14 @@ streamlit
 pandas
 numpy
 plotly
-networkx
+matplotlib
+seaborn
+openpyxl
 mlxtend
-langchain-openai
-langchain-core
 statsmodels
 prophet
 xgboost
 scikit-learn
-xlsxwriter
-openpyxl
+langchain-openai
+langchain-core
+openai
