changes in requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,14 @@ streamlit
 pandas
 numpy
 plotly
-matplotlib
 seaborn
-openpyxl
+matplotlib
 mlxtend
+langchain-openai
+langchain-core
 statsmodels
+requests
 prophet
 xgboost
 scikit-learn
-langchain-openai
-langchain-core
-openai
+openpyxl
